一个简单的移动端页面

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <title>vue-book</title>
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_623388_qgwsaiwby268byb9.css">
+    <link rel="stylesheet" href="//at.alicdn.com/t/font_623321_4p8q4ejbc56zuxr.css">
   </head>
   <body>
     <div id="app"></div>
